--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts",
-    "format:check":
-    "prettier --check ./src",
+    "format:check": "prettier --check ./src",
     "format:write": "prettier --write ./src",
     "lint:check": "eslint ./src",
     "lint:fix": "eslint --fix ./src"
@@ -23,7 +22,8 @@
   },
   "homepage": "https://github.com/Zap-Boom/Junction2022#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
