--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Zap-Boom/Junction2022#readme",
   "dependencies": {
+    "@types/express-ws": "^3.0.1",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.1"
   },
