--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts",
     "format:check": "prettier --check ./src",
-    "format:write": "prettier --write ./src",
-    "lint:check": "eslint ./src",
-    "lint:fix": "eslint --fix ./src"
+    "format:write": "prettier --write ./src"
   },
   "repository": {
     "type": "git",
