--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,13 @@
   "homepage": "https://github.com/Zap-Boom/Junction2022#readme",
   "dependencies": {
     "@types/express-ws": "^3.0.1",
+    "@types/underscore": "^1.11.4",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
