--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.1",
+    "timemachine": "^0.3.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
